--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   },
   "dependencies": {
     "next": "latest",
+    "next-cache": "^1.3.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   }
